kub-brandsSource-service-boot2-V2/k8s/istio/dp-brandsSource-v1-blue-gke.yaml
#Note that when you want to use the Envoy sidecar with your pods, 
#the label “app” should be present (it’s used in the request tracing feature),

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dp-brandssource-v1
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: brandssource
        version: brandssource-version-1
    spec:
      containers:
      - name: brandssource-version-1
        image: ddas55/kub-brandssource-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8070
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: vm-kub-brandssource-appprops
          mountPath: "/config/" 
          readOnly: true
        volumeMounts:
        - name: vm-kub-brandssource-bootstrap
          mountPath: "/config/bootstrap" 
          readOnly: true
        volumeMounts:
        - name: vm-kub-brandssource-apppropsprod
          mountPath: "/config/prod" 
          readOnly: true
        livenessProbe:
          httpGet:
            path: /svcbrands/brands/healthz
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /svcbrands/brands/rediness
            port: 8070
            httpHeaders:
             - name: X-Custom-Header
               value: Awesome
          initialDelaySeconds: 5
      volumes:
      - name: vm-kub-brandssource-appprops
        configMap:
          name: cm-kub-brandssource-app
          items:
          - key: application.properties 
            path: application.properties
      - name: vm-kub-brandssource-bootstrap
        configMap:
          name: cm-kub-brandssource-bootstrap
          items:
          - key: bootstrap.properties 
            path: bootstrap.properties
      - name: vm-kub-brandssource-apppropsprod
        configMap:
          name: cm-kub-brandssource-apppropsprod
          items:
          - key: application-prod.properties 
            path: application-prod.properties
